# WebTagScraper

./: GEMINI.md  README.md  _temp_diff.txt  _temp_diff_utf8.txt  app.py  main.py  pyproject.toml  requirements.txt
.agent/skill/web-tag-scraper/: SKILL.md
.agent/skill/web-tag-scraper/agents/: openai.yaml
.agent/skill/web-tag-scraper/references/: extraction-rules.md
CHANGELOG/: 2026-02-23_ui_and_exe_build.md  2026-02-24_scraper_rel_and_app_uvicorn.md
file/: input.xlsx  output.xlsx
src/: reader.py  scraper.py  writer.py
static/: index.html  script.js  style.css
tests/: create_mock.py
