[project]
name = "webscrapper-for-tag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.131.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "pyinstaller>=6.19.0",
    "python-multipart>=0.0.22",
    "uvicorn>=0.41.0",
]
